# comfyui-spiritparticle

./: .gitignore  README.md  __init__.py  pyproject.toml  workflow.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml
sample-images/: IMG001.txt  IMG002.txt  IMG003.txt
src/FolderImageSelector/: nodes.py
src/HighPassFilter/: nodes.py
src/ImageBlender/: nodes.py
src/RandomModelLoader/: nodes.py
src/web/: ShowText.js
web/: spiritparticle.js
