[project]
name = "comfyui-spiritparticle"
description = ""
version = "0.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/comfyanonymous/ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "spiritparticle"
Icon = ""